--- a/index.html
+++ b/index.html
@@ -9,22 +9,158 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-------------->
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/3d4fb0f23e.js" crossorigin="anonymous"></script>
+    <!--------------->
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portafolio</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
         <div class="container-fluid">
-            <div class="pic row"></div>
-            <div class="info row"></div>
-            <div class="aboutme row"></div>
-            <div class="tecnologies row"></div>
-            <div class="jobs row"></div>
-            <div class="networks row"></div>
+            <div class="pic row bg-dark  p-3 rounded-4 justify-content-center text-center m-3">
+                <div>
+                    <img class="img-fluid rounded-4" src="assets/imgs/foto.jpg" alt="foto rostro">
+                </div>
+            </div>
+            <div class="info row bg-dark m-3 p-3 rounded-4 text-light text-center">
+                <h4>Informacion Personal</h4>
+                <p>
+                <ul>
+                    <li>Nombre: Juan Pablo Álvarez</li>
+                    <li>Rut: 18.540.740-3</li>
+                    <li>Telefono: +56979873936</li>
+                    <li>Instagram: Quezaendelgato</li>
+                </ul>
+                </p>
+            </div>
+            <div class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center">
+                <h4>Sobre Mi</h4>
+                <p>
+                    Soy Juan Pablo Álvarez, un estudiante de Programación full Stack con conocimientos en HTML, CSS,
+                    JavaScript, MySQL y otras tecnologías a fines al rubro, además de tener experiencia en soporte
+                    técnico computacional en terreno, cableado de red y estudios en electrónica, listo para ayudar a
+                    potenciar todos tus proyectos con soluciones web teniendo en cuenta el diseño y la funcionalidad
+                    para dar la mejor experiencia a los usuarios de tu emprendimiento.
+                </p>
+            </div>
+            <div class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                <h4 class="pb-2">Tecnologias</h4>
+                <div class="tecnology">
+                    <h4>Html</h4>
+                    <i class="icon_tecnology fa-brands fa-html5"></i>
+                </div>
+                <div class="tecnology">
+                    <h4>Css</h4>
+                    <div class="icono">
+                        <i class="icon_tecnology fa-brands fa-css3-alt"></i>
+                    </div>
+                </div>
+                <div class="tecnology">
+                    <h4>Bootstrap</h4>
+                    <div class="icono">
+                        <i class="icon_tecnology fa-brands fa-bootstrap"></i>
+                    </div>
+                </div>
+                <div class="tecnology">
+                    <h4>GitHub</h4>
+                    <div class="icono">
+                        <i class="icon_tecnology fa-brands fa-github"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="jobs row  bg-dark m-3 p-3 rounded-4 text-light text-center">
+                <h4>Trabajos</h4>
+                <div class="container">
+                    <div class="card m-3">
+                        <img src="assets/imgs/GitPage/Curriculum.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Curriculum</h5>
+                            <div class="d-flex justify-content-evenly">
+                                <a href="#" class="btn btn-primary">Repositorio</a>
+                                <a href="#" class="btn btn-primary">Page</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-3">
+                        <img src="assets/imgs/GitPage/Landing.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Landing</h5>
+                            <div class="d-flex justify-content-evenly">
+                                <a href="#" class="btn btn-primary">Repositorio</a>
+                                <a href="#" class="btn btn-primary">Page</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-3">
+                        <img src="assets/imgs/GitPage/Iguana.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">IguanaPage</h5>
+                            <div class="d-flex justify-content-evenly">
+                                <a href="#" class="btn btn-primary">Repositorio</a>
+                                <a href="#" class="btn btn-primary">Page</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-3">
+                        <img src="assets/imgs/GitPage/Kutral.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Kutralche</h5>
+                            <div class="d-flex justify-content-evenly">
+                                <a href="#" class="btn btn-primary">Repositorio</a>
+                                <a href="#" class="btn btn-primary">Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                <div class="net">
+                    <h4>Instagram</h4>
+                    <i class="icon_net fa-brands fa-instagram"></i>
+                </div>
+                <div class="net">
+                    <h4>Facebook</h4>
+                    <i class="icon_net fa-brands fa-facebook"></i>
+                </div>
+                <div class="net">
+                    <h4>Git</h4>
+                    <i class="icon_net fa-brands fa-git"></i>
+                </div>
+            </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="bg-dark text-center text-light py-2">
+        <p>ju.alvareze@gmail.com</p>
+    </footer>
     <!--bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
