--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,16 +27,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#info">informacion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#aboutme">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="#tecnologies">Tecnologias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
+                            <a class="nav-link" href="#jobs">Trabajos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#networks">Redes</a>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +53,7 @@
                     <img class="img-fluid rounded-4" src="assets/imgs/foto.jpg" alt="foto rostro">
                 </div>
             </div>
-            <div class="info row bg-dark m-3 p-3 rounded-4 text-light text-center">
+            <div id="info" class="info row bg-dark m-3 p-3 rounded-4 text-light text-center">
                 <h4>Informacion Personal</h4>
                 <p>
                 <ul>
@@ -62,7 +64,7 @@
                 </ul>
                 </p>
             </div>
-            <div class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center">
+            <div id="aboutme" class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center">
                 <h4>Sobre Mi</h4>
                 <p>
                     Soy Juan Pablo Álvarez, un estudiante de Programación full Stack con conocimientos en HTML, CSS,
@@ -72,7 +74,7 @@
                     para dar la mejor experiencia a los usuarios de tu emprendimiento.
                 </p>
             </div>
-            <div class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+            <div id="tecnologies" class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <h4 class="pb-2">Tecnologias</h4>
                 <div class="tecnology">
                     <h4>Html</h4>
@@ -97,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="jobs row  bg-dark m-3 p-3 rounded-4 text-light text-center">
+            <div id="jobs" class="jobs row  bg-dark m-3 p-3 rounded-4 text-light text-center">
                 <h4>Trabajos</h4>
                 <div class="container">
                     <div class="card m-3">
@@ -142,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+            <div id="networks" class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="net">
                     <h4>Instagram</h4>
                     <i class="icon_net fa-brands fa-instagram"></i>
