algunos padding y una imagen de las Page

--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
             <div id="tecnologies" class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <h4 class="pb-2">Tecnologias</h4>
                 <div class="tecnology">
-                    <h4>Html</h4>
+                    <h4 class="title_tecnology">Html</h4>
                     <i class="icon_tecnology fa-brands fa-html5"></i>
                 </div>
                 <div class="tecnology">
-                    <h4>Css</h4>
+                    <h4 class="title_tecnology">Css</h4>
                     <div class="icono">
                         <i class="icon_tecnology fa-brands fa-css3-alt"></i>
                     </div>
                 </div>
                 <div class="tecnology">
-                    <h4>Bootstrap</h4>
+                    <h4 class="title_tecnology">Bootstrap</h4>
                     <div class="icono">
                         <i class="icon_tecnology fa-brands fa-bootstrap"></i>
                     </div>
                 </div>
                 <div class="tecnology">
-                    <h4>GitHub</h4>
+                    <h4 class="title_tecnology">GitHub</h4>
                     <div class="icono">
                         <i class="icon_tecnology fa-brands fa-github"></i>
                     </div>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="net">
                     <h4>Git</h4>
-                    <i class="icon_net fa-brands fa-git"></i>
+                    <i class="icon_net fa-brands fa-square-github"></i>
                 </div>
             </div>
         </div>
