ajustes paddings y backgrownds

--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@
                 <h4 class="pb-2">Tecnologias</h4>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Html</h4>
-                    <i class="icon_tecnology fa-brands fa-html5"></i>
+                    <i class="html_icon icon_tecnology fa-brands fa-html5"></i>
                 </div>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Css</h4>
                     <div class="icono">
-                        <i class="icon_tecnology fa-brands fa-css3-alt"></i>
+                        <i class="css_icon icon_tecnology fa-brands fa-css3-alt"></i>
                     </div>
                 </div>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Bootstrap</h4>
                     <div class="icono"> 
-                        <i class="icon_tecnology fa-brands fa-bootstrap"></i>
+                        <i class="bootstrap_icon icon_tecnology fa-brands fa-bootstrap"></i>
                     </div>
                 </div>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">GitHub</h4>
                     <div class="icono">
-                        <i class="icon_tecnology fa-brands fa-github"></i>
+                        <i class="git_icon icon_tecnology fa-brands fa-github"></i>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <h4>Trabajos</h4>
                 <div class="container">
                     <div class="row cards text-center justify-content-evenly">
-                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3">
+                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3 p-0">
                             <img src="assets/imgs/GitPage/Curriculum.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Curriculum</h5>
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3">
+                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3 p-0">
                             <img src="assets/imgs/GitPage/Landing.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Landing</h5>
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3">
+                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3 p-0">
                             <img src="assets/imgs/GitPage/Iguana.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">IguanaPage</h5>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3">
+                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3 p-0">
                             <img src="assets/imgs/GitPage/Kutral.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Kutralche</h5>
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3">
+                        <div class="card col-sm-10 col-md-5 col-xl-3 m-3 p-0">
                             <img src="assets/imgs/GitPage/Cuppon.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cuppon</h5>
