--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/3d4fb0f23e.js" crossorigin="anonymous"></script>
     <!--------------->
+    <!--GoogleFonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
+    <!------------------>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portafolio</title>
 </head>
@@ -54,7 +59,8 @@
                         <img class="img-fluid rounded-4" src="assets/imgs/foto.jpg" alt="foto rostro">
                     </div>
                 </div>
-                <div id="info" class="col-sm-10 col-md-5 bg-dark m-3  p-3 rounded-4 text-light text-center justify-content-center">
+                <div id="info"
+                    class="col-sm-10 col-md-5 bg-dark m-3  p-3 rounded-4 text-light text-center justify-content-center align-items-center">
                     <div class="info_text">
                         <h4>Informacion Personal</h4>
                         <p>
@@ -68,7 +74,8 @@
                     </div>
                 </div>
             </div>
-            <div id="aboutme" class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+            <div id="aboutme"
+                class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="aboutme_text col-sm-10">
                     <h4>Sobre Mi</h4>
                     <p>
@@ -80,7 +87,8 @@
                     </p>
                 </div>
             </div>
-            <div id="tecnologies" class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+            <div id="tecnologies"
+                class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <h4 class="pb-2">Tecnologias</h4>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Html</h4>
@@ -94,7 +102,7 @@
                 </div>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Bootstrap</h4>
-                    <div class="icono"> 
+                    <div class="icono">
                         <i class="bootstrap_icon icon_tecnology fa-brands fa-bootstrap"></i>
                     </div>
                 </div>
@@ -114,8 +122,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Curriculum</h5>
                                 <div class="d-flex justify-content-evenly">
-                                    <a href="#" class="btn btn-primary">Repositorio</a>
-                                    <a href="#" class="btn btn-primary">Page</a>
+                                    <a href="https://github.com/jualvareze/Curriculum" class="boton">Repositorio</a>
+                                    <a href="https://jualvareze.github.io/Curriculum/" class="boton">Page</a>
                                 </div>
                             </div>
                         </div>
@@ -124,8 +132,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Landing</h5>
                                 <div class="d-flex justify-content-evenly">
-                                    <a href="#" class="btn btn-primary">Repositorio</a>
-                                    <a href="#" class="btn btn-primary">Page</a>
+                                    <a href="https://github.com/jualvareze/LandingPage" class="boton">Repositorio</a>
+                                    <a href="https://jualvareze.github.io/LandingPage/" class="boton">Page</a>
                                 </div>
                             </div>
                         </div>
@@ -134,8 +142,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">IguanaPage</h5>
                                 <div class="d-flex justify-content-evenly">
-                                    <a href="#" class="btn btn-primary">Repositorio</a>
-                                    <a href="#" class="btn btn-primary">Page</a>
+                                    <a href="https://github.com/jualvareze/IguanaPage" class="boton">Repositorio</a>
+                                    <a href="https://jualvareze.github.io/IguanaPage/" class="boton">Page</a>
                                 </div>
                             </div>
                         </div>
@@ -144,8 +152,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Kutralche</h5>
                                 <div class="d-flex justify-content-evenly">
-                                    <a href="#" class="btn btn-primary">Repositorio</a>
-                                    <a href="#" class="btn btn-primary">Page</a>
+                                    <a href="https://github.com/jualvareze/Kutralche" class="boton">Repositorio</a>
+                                    <a href="https://jualvareze.github.io/Kutralche/" class="boton">Page</a>
                                 </div>
                             </div>
                         </div>
@@ -154,15 +162,16 @@
                             <div class="card-body">
                                 <h5 class="card-title">Cuppon</h5>
                                 <div class="d-flex justify-content-evenly">
-                                    <a href="#" class="btn btn-primary">Repositorio</a>
-                                    <a href="#" class="btn btn-primary">Page</a>
+                                    <a href="https://github.com/jualvareze/Cuppon" class="boton">Repositorio</a>
+                                    <a href="https://jualvareze.github.io/Cuppon/" class="boton">Page</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="networks" class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+            <div id="networks"
+                class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="net col-sm-6 col-md-4">
                     <h4>Instagram</h4>
                     <i class="icon_net fa-brands fa-instagram"></i>
