--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <div class="container-fluid">
-            <div class="info row justify-content-center text-center m-3 mx-auto">
+            <div class="info row justify-content-center text-center p-3  mx-auto">
                 <div class="pic col-sm-10 col-md-5 bg-dark m-3  p-3 rounded-4 justify-content-center text-center">
                     <div class="">
                         <img class="img-fluid rounded-4" src="assets/imgs/foto.jpg" alt="foto rostro">
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div id="aboutme"
-                class="aboutme row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                class="aboutme mx-auto row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="aboutme_text col-sm-10">
                     <h4>Sobre Mi</h4>
                     <p>
