--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     </header>
     <main>
         <div class="container-fluid">
-            <div class="info row justify-content-evenly text-center p-3  mx-auto">
-                <div class="pic col-sm-10 col-md-5 bg-dark  p-3 rounded-4 justify-content-center text-center">
+            <div class="info row justify-content-evenly text-center   mx-auto">
+                <div class="pic col-sm-10 col-md-5 bg-dark m-3 p-3 rounded-4 justify-content-center text-center">
                     <div class="">
                         <img class="img-fluid rounded-4" src="assets/imgs/foto.jpg" alt="foto rostro">
                     </div>
                 </div>
                 <div id="info"
-                    class="col-sm-10 col-md-5 bg-dark  p-3 rounded-4 text-light text-center justify-content-center align-items-center">
+                    class="col-sm-10 col-md-5 bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center align-items-center">
                     <div class="info_text">
                         <h4>Informacion Personal</h4>
                         <p>
