--- a/index.html
+++ b/index.html
@@ -173,16 +173,23 @@
             <div id="networks"
                 class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="net col-sm-6 col-md-4">
-                    <h4>Instagram</h4>
+                    <a href="https://www.instagram.com/quezaendelgato/">
+                        <h4>Instagram</h4>
                     <i class="icon_net fa-brands fa-instagram"></i>
+                    </a>
+                    
                 </div>
                 <div class="net col-sm-6 col-md-4">
-                    <h4>Facebook</h4>
+                    <a href="https://www.facebook.com/juan.alvarezespinoza.9">
+                        <h4>Facebook</h4>
                     <i class="icon_net fa-brands fa-facebook"></i>
+                    </a>
                 </div>
                 <div class="net col-sm-6 col-md-4">
-                    <h4>Git</h4>
-                    <i class="icon_net fa-brands fa-square-github"></i>
+                        <a href="https://github.com/jualvareze">
+                            <h4>Git</h4>
+                            <i class="icon_net fa-brands fa-square-github"></i>
+                        </a>
                 </div>
             </div>
         </div>
