--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div id="info"
-                    class="col-sm-10 col-md-5 bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center align-items-center">
+                    class="col-sm-10 col-md-5 bg-secondary m-3 p-3 rounded-4 text-light text-center justify-content-center align-items-center">
                     <div class="info_text">
                         <h4>Informacion Personal</h4>
                         <p>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div id="aboutme"
-                class="aboutme mx-auto row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                class="aboutme mx-auto row bg-secondary m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="aboutme_text col-sm-10">
                     <h4>Sobre Mi</h4>
                     <p>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div id="tecnologies"
-                class="tecnologies row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                class="tecnologies row bg-secondary m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <h4 class="pb-2">Tecnologias</h4>
                 <div class="tecnology col-sm-10 col-md-6 col-lg-4 col-xl-3">
                     <h4 class="title_tecnology">Html</h4>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div id="jobs" class="jobs row  bg-dark m-3 p-3 rounded-4 text-light text-center">
+            <div id="jobs" class="jobs row  bg-secondary m-3 p-3 rounded-4 text-light text-center">
                 <h4>Trabajos</h4>
                 <div class="container">
                     <div class="row cards text-center justify-content-evenly">
@@ -171,9 +171,9 @@
                 </div>
             </div>
             <div id="networks"
-                class="networks row bg-dark m-3 p-3 rounded-4 text-light text-center justify-content-center">
+                class="networks row bg-secondary m-3 p-3 rounded-4 text-light text-center justify-content-center">
                 <div class="net col-sm-6 col-md-4">
-                    <a href="https://www.instagram.com/quezaendelgato/">
+                    <a href="https://www.instagram.com/quezaendelgato/" target="_blank"> 
                         <h4>Instagram</h4>
                     <i class="icon_net fa-brands fa-instagram"></i>
                     </a>
@@ -194,7 +194,7 @@
             </div>
         </div>
     </main>
-    <footer class="bg-dark text-center text-light py-2">
+    <footer class="bg-secondary text-center text-light py-2">
         <p>ju.alvareze@gmail.com</p>
     </footer>
     <!--bootstrap-->
